[project]
name = "mcp-reyes"
version = "0.1.0"
description = "MCP server providing access to CCN-CERT Reyes tools"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "icalendar>=5.0.11",
    "aiohttp>=3.9.0",
    "python-dateutil>=2.8.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.110.0",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-reyes = "server:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"
